finished styling for now

--- a/src/Content.css
+++ b/src/Content.css
@@ -1,13 +1,7 @@
-#youtube{
-    display: flex;
-}
-/* div{
-    color: bisque;
-}
-p{
-    color: bisque
-} */
 #body{
-    background-color: #783937;
-    color: bisque;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
 }
