--- a/src/Recipe.css
+++ b/src/Recipe.css
@@ -1,5 +1,4 @@
-body{
-    align-content: center;
-    /* background-color: #F1AC88; */
-    display: flex;
+img{
+    width: 70%;
+    height: auto;
 }
