--- a/src/Video.css
+++ b/src/Video.css
@@ -1,3 +1,19 @@
 #body{
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    height: fit-content;
+
+}
+
+button{
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+}
+
+p{
+    text-align: center;
+    justify-content: center;
     align-content: center;
 }
